[project]
name = "discoin"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "fastapi-swagger-ui-theme>=0.1.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "bcrypt>=4.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.27",
    "discord.py>=2.6.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "lupa>=2.0",
    "chess>=1.10.0,<1.11",
    "pillow>=11.0.0",
    "matplotlib>=3.9.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "cffi>=1.16.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
]

[tool.uv]
# Discoin is a script project, not an installable package.
# uv sync installs deps only, not the project itself.
package = false
